2008-10-03  Satoshi Nakagawa <psychs@limechat.net>

	Cut seconds from timestamps.

==== LimeChat 0.20 ====

==== LimeChat 0.19.4 ====

2008-09-17  Satoshi Nakagawa <psychs@limechat.net>

	Don't use invalid hot keys.

==== LimeChat 0.19.3 ====

2008-09-17  Satoshi Nakagawa <psychs@limechat.net>

	Fixed a bug, the Highlight tab should be selected by default on the preferences dialog.
	Cut off unnecessary code.

==== LimeChat 0.19.2 ====

2008-09-17  Satoshi Nakagawa <psychs@limechat.net>

	Added the hot key option in preferences.

2008-09-17  Satoshi Nakagawa <psychs@limechat.net>

	Added "Channel notice received" and "Talk notice received" to the Growl notification types.

2008-09-17  Satoshi Nakagawa <psychs@limechat.net>

	Turn on the sticky option of Growl notifications again.

2008-09-16  Satoshi Nakagawa <psychs@limechat.net>

	Removed the sticky option for all kind of Growl notifications.

2008-09-12  Satoshi Nakagawa <psychs@limechat.net>

	Supported filenames surrounded by double quotations in DCC file transfers.

2008-08-11  Satoshi Nakagawa <psychs@limechat.net>

	Added context menu on channel name in logs.
	Based on a patch from Peter Haza.

2008-08-10  Satoshi Nakagawa <psychs@limechat.net>

	AutoOp dialog could cause a nil access exception.

2008-08-10  Satoshi Nakagawa <psychs@limechat.net>

	Separated InputTextField class from TextField class.

2008-08-05  Satoshi Nakagawa <psychs@limechat.net>

	Assigned cmd+shift+L for a hot key to activate LimeChat.
	Inspired by a patch from Keiji Yoshimi.

2008-08-04  Satoshi Nakagawa <psychs@limechat.net>

	Assigned opt+tab to move to the last selected channel.

2008-08-04  Keiji Yoshimi <walf443@gmail.com>

	It may be better to convert from NSImage to NSData transparently for
	following document and unifing interface of app_icon.

2008-07-28  Satoshi Nakagawa <psychs@limechat.net>

	Updated GrowlNotifier.

2008-07-24  Satoshi Nakagawa <psychs@limechat.net>
